--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="modal-separator"></div>
                 <div class="modal-body">
                     <form class="d-grid gap-2 col-9 mx-auto mt-4" role="search" onsubmit="return false">
-                        <input type="number" class="form-control mb-2" id="subject" placeholder="Enter CIE Marks of the subject" min="20" max="50" required>
+                        <input type="number" class="form-control mb-2" id="subject" placeholder="Enter Overall CIE Marks of the subject" min="20" max="50" required>
                         <p class="text-center" style="font-size: 17px;">Select the desired grade point:</p>
                         <div class="input-group input-group-md mb-2">
                             <select class="form-select" id="inputGroupSelect01">
@@ -102,6 +102,7 @@
                 </div>
                 <div class="modal-separator"></div>
                 <div class="modal-body" id="loadsubs">
+                    <p>Input the Overall CIE Marks for Each subject:</p>
                     <!-- Rows based on number of subjects using Javascript -->
                 </div>
                 <div class="modal-separator"></div>
