--- a/index.html
+++ b/index.html
@@ -9,18 +9,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="toast" role="alert" id="notify" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header">
-          <img src="..." class="rounded mr-2" alt="...">
-          <strong class="mr-auto">SEE Range Calculator</strong>
-          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="toast-body">
-
-        </div>
-      </div>
     <img src="https://i.ibb.co/gb0GBZr/Designer.jpg" class="img-fluid" alt="Responsive image">
     <div class="container-sm mt-4">
         <h1 class="text-center mb-3">SEE Range Calculator</h1>
@@ -36,12 +24,12 @@
             <div style="background-color: #F6E7D2" class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title fs-5" id="singlesubLabel">Single Subject</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="location.reload()"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="cleansingle()"></button>
                 </div>
                 <div class="modal-separator"></div>
                 <div class="modal-body">
                     <form class="d-grid gap-2 col-9 mx-auto mt-4" role="search" onsubmit="return false">
-                        <input type="number" class="form-control mb-2" id="subject" placeholder="Enter Overall CIE Marks of the subject" min="20" max="50" required>
+                        <input type="number" class="form-control mb-2" id="subject" placeholder="Enter Overall CIE Marks of the subject" min="20" max="50" maxlength="2" required>
                         <p class="text-center" style="font-size: 17px;">Select the desired grade point:</p>
                         <div class="input-group input-group-md mb-2">
                             <select class="form-select" id="inputGroupSelect01">
@@ -67,7 +55,7 @@
                 </div>
                 <div class="modal-separator"></div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal" onclick="location.reload()">Close</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal" onclick="cleansingle()">Close</button>
                 </div>
             </div>
         </div>
@@ -78,15 +66,15 @@
           <div class="modal-content" style="background-color: #F6E7D2">
             <div class="modal-header">
               <h2 class="modal-title fs-5" id="staticBackdropLabel">No. of Subjects</h2>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="location.reload()"></button>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="cleansub()"></button>
             </div>
             <div class="modal-separator"></div>
             <div class="modal-body">
-              <input type="number" class="form-control mb-2" id="subs" placeholder="Enter the number of subjects" min="2" max="10" required>
+              <input type="number" class="form-control mb-2" id="subs" placeholder="Enter the number of subjects" min="2" max="10" maxlength="2" required>
             </div>
             <div class="modal-separator"></div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-danger" data-bs-dismiss="modal" onclick="location.reload()">Close</button>
+              <button type="button" class="btn btn-danger" data-bs-dismiss="modal" onclick="cleansub()">Close</button>
               <button type="button" class="btn btn-primary" onclick="loadmodal()">Input Marks</button>
             </div>
           </div>
@@ -98,16 +86,16 @@
             <div style="background-color: #F6E7D2" class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title fs-5" id="multiplesubLabel">Multiple Subjects</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="location.reload()"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="cleansub()"></button>
                 </div>
                 <div class="modal-separator"></div>
                 <div class="modal-body" id="loadsubs">
-                    <p>Input the Overall CIE Marks for Each subject:</p>
                     <!-- Rows based on number of subjects using Javascript -->
                 </div>
                 <div class="modal-separator"></div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal" onclick="location.reload()">Close</button>
+                <div class="modal-footer justify-content-between">
+                    <button type="button" class="btn btn-primary" data-bs-backdrop="static" data-bs-keyboard="false" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#multisub" onclick="cleanrows()">Back</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal" onclick="cleansub()">Close</button>
                     <button type="submit" class="btn btn-primary" onclick="getrange2()">Calculate</button>
                 </div>
             </div>
